<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_offert"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.usuario.offering.CreateOffertActivity">

    <TextView
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_name"
        android:id="@+id/txvName"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtName"
        android:layout_toRightOf="@+id/txvName"
        />



    <TextView
        android:layout_below="@+id/txvName"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_tienda"
        android:id="@+id/txvTienda"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edtTienda"
        android:layout_below="@+id/edtName"
        android:layout_toRightOf="@+id/txvTienda"

        />


    <TextView

        android:layout_below="@+id/txvTienda"
        android:layout_marginTop="15dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_fecha"
        android:id="@+id/txvFecha"

        />

    <EditText

        android:id="@+id/edtFecha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/txvFecha"
        android:layout_below="@+id/txvTienda"

        />



    <LinearLayout
        android:layout_marginTop="10dp"
        android:id="@+id/linear"
        android:layout_below="@+id/txvFecha"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_tipo"
            android:id="@+id/txvTipo"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinerTipo"
            ></Spinner>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearUltimo"
        android:layout_below="@+id/linear"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_see_importancia"
            android:id="@+id/txvImportancia"
            />

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/spinerImportancia"
            ></Spinner>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnAdd"
        android:layout_below="@+id/linearUltimo"
        android:layout_centerHorizontal="true"
        android:background="@drawable/sape_btn"
        android:text="@string/app_add"
        android:layout_marginTop="20dp"
        />




</RelativeLayout>
